--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,15 @@
 <body class="flex justify-center bg-slate-400">
     <div class="rounded-lg w-96 h-fit mt-24 bg-white overflow-hidden">
         <header class="h-36 bg-cover bg-[url(https://media.istockphoto.com/id/1470023265/photo/question-mark-icon-on-blue-background-speech-bubble-clipping-path.jpg?b=1&s=170667a&w=0&k=20&c=wrSJl4tRTsMWGYgedjDbU7uSXG6PUp-oOD_UX7jMfVQ=)]">
+            <h2 class="text-white text-4xl font-semibold pt-2 ml-6">Just <br> do <br> it.</h2>
         </header>
         <main class="p-5">
             <form class="flex justify-between">
                 <input class="border-2 border-green-700 rounded-lg outline-none w-3/4 h-10 pl-2" type="text" placeholder="Add todo">
-                <button class="bg-blue-600 text-white w-12 h-10 rounded-sm hover:bg-blue-700">Add</button>
+                <button class="bg-blue-600 text-white w-12 h-10 rounded-md hover:bg-blue-700">Add</button>
             </form>
             <ul class="mt-4">
-                <li class="pl-2">My first todo</li>
+                <li class="p-2 pl-2 bg-green-500 rounded-md text-gray-800">Default todo</li>
             </ul>
         </main>
     </div>
