--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
                 <button class="bg-blue-600 text-white w-12 h-10 rounded-md hover:bg-blue-700">Add</button>
             </form>
             <ul class="mt-4">
-                <li class="p-2 pl-2 bg-green-500 rounded-md text-gray-800">Default todo</li>
+                <li class="to-do p-2 pl-2 bg-green-500 rounded-md text-gray-800 flex justify-between">First one</li>
             </ul>
         </main>
     </div>
