--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
                 <button class="bg-blue-600 text-white w-12 h-10 rounded-md hover:bg-blue-700">Add</button>
             </form>
             <ul class="mt-4">
-                <li class="to-do p-2 pl-2 bg-green-500 rounded-md text-gray-800 flex justify-between">First one</li>
+                <li class="bg-gray-300 rounded-md flex justify-between p-2">
+                    <span class="self-center">Todo 1</span>
+                    <span class="bg-red-500 rounded-md text-white p-1 cursor-pointer">Delete</span>
+                </li>
             </ul>
         </main>
     </div>
